Add AIC to probit results

--- a/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
+++ b/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "e104cf5a-e13f-4659-923c-f98b91057833",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,7 @@
     "import os\n",
     "import numpy as np\n",
     "import statsmodels.discrete.discrete_model as smd\n",
+    "from statsmodels.tools import add_constant\n",
     "import statsmodels.formula.api as smf"
    ]
   },
@@ -428,20 +429,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "923605b7",
+   "execution_count": 29,
+   "id": "edef4f00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(243,)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "probit_vars = ['age', 'sex', 'BikingForWork', 'Num of Recreational-Biker', \n",
-    "               'AccessToMotorVehicle_1Yes-2No-3Unknown', \n",
-    "               'Neighbourhood-bikeLength_KM', 'Time from MajorBikePath_min']"
+    "y_probit_gt2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "392da776",
+   "execution_count": 31,
+   "id": "44fdc7e3",
    "metadata": {},
    "outputs": [
     {
@@ -449,8 +459,50 @@
      "output_type": "stream",
      "text": [
       "Optimization terminated successfully.\n",
-      "         Current function value: 0.501260\n",
-      "         Iterations 6\n"
+      "         Current function value: 0.508286\n",
+      "         Iterations 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "249.02714800340607"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probit_Nmod = smd.Probit(y_probit_gt2, np.ones(y_probit_gt2.shape))\n",
+    "probit_Nres = probit_Nmod.fit()\n",
+    "probit_null_aic = probit_Nres.aic\n",
+    "probit_null_aic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4846d1ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.485867\n",
+      "         Iterations 6\n",
+      "252.13 vs null 249.03\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tiggy/anaconda3/lib/python3.9/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
+      "  x = pd.concat(x[::order], 1)\n"
      ]
     },
     {
@@ -462,22 +514,22 @@
        "  <th>Dep. Variable:</th>   <td>Rank_Overall-Quality-Of-Biking</td> <th>  No. Observations:  </th>  <td>   243</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                       <td>Probit</td>             <th>  Df Residuals:      </th>  <td>   236</td> \n",
+       "  <th>Model:</th>                       <td>Probit</td>             <th>  Df Residuals:      </th>  <td>   235</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>                        <td>MLE</td>              <th>  Df Model:          </th>  <td>     6</td> \n",
+       "  <th>Method:</th>                        <td>MLE</td>              <th>  Df Model:          </th>  <td>     7</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                   <td>Fri, 23 Feb 2024</td>        <th>  Pseudo R-squ.:     </th>  <td>0.01382</td>\n",
+       "  <th>Date:</th>                   <td>Sat, 24 Feb 2024</td>        <th>  Pseudo R-squ.:     </th>  <td>0.04411</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                       <td>21:51:06</td>            <th>  Log-Likelihood:    </th> <td> -121.81</td>\n",
+       "  <th>Time:</th>                       <td>12:15:15</td>            <th>  Log-Likelihood:    </th> <td> -118.07</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>                    <td>True</td>              <th>  LL-Null:           </th> <td> -123.51</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Covariance Type:</th>            <td>nonrobust</td>           <th>  LLR p-value:       </th>  <td>0.7553</td> \n",
+       "  <th>Covariance Type:</th>            <td>nonrobust</td>           <th>  LLR p-value:       </th>  <td>0.1432</td> \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -485,25 +537,28 @@
        "                     <td></td>                       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>age</th>                                    <td>    0.0034</td> <td>    0.004</td> <td>    0.768</td> <td> 0.443</td> <td>   -0.005</td> <td>    0.012</td>\n",
+       "  <th>const</th>                                  <td>    1.2650</td> <td>    0.466</td> <td>    2.713</td> <td> 0.007</td> <td>    0.351</td> <td>    2.179</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>sex</th>                                    <td>    0.1014</td> <td>    0.188</td> <td>    0.539</td> <td> 0.590</td> <td>   -0.267</td> <td>    0.470</td>\n",
+       "  <th>age</th>                                    <td>   -0.0100</td> <td>    0.007</td> <td>   -1.518</td> <td> 0.129</td> <td>   -0.023</td> <td>    0.003</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>BikingForWork</th>                          <td>    0.3989</td> <td>    0.150</td> <td>    2.665</td> <td> 0.008</td> <td>    0.106</td> <td>    0.692</td>\n",
+       "  <th>sex</th>                                    <td>    0.0381</td> <td>    0.192</td> <td>    0.198</td> <td> 0.843</td> <td>   -0.339</td> <td>    0.415</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Num of Recreational-Biker</th>              <td>    0.0015</td> <td>    0.095</td> <td>    0.016</td> <td> 0.987</td> <td>   -0.185</td> <td>    0.188</td>\n",
+       "  <th>BikingForWork</th>                          <td>    0.3104</td> <td>    0.151</td> <td>    2.049</td> <td> 0.040</td> <td>    0.014</td> <td>    0.607</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>AccessToMotorVehicle_1Yes-2No-3Unknown</th> <td> 2.961e-05</td> <td>    0.069</td> <td>    0.000</td> <td> 1.000</td> <td>   -0.135</td> <td>    0.136</td>\n",
+       "  <th>Num of Recreational-Biker</th>              <td>   -0.1080</td> <td>    0.103</td> <td>   -1.050</td> <td> 0.294</td> <td>   -0.310</td> <td>    0.094</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Neighbourhood-bikeLength_KM</th>            <td>    0.0282</td> <td>    0.017</td> <td>    1.688</td> <td> 0.091</td> <td>   -0.005</td> <td>    0.061</td>\n",
+       "  <th>AccessToMotorVehicle_1Yes-2No-3Unknown</th> <td>   -0.1147</td> <td>    0.081</td> <td>   -1.410</td> <td> 0.159</td> <td>   -0.274</td> <td>    0.045</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time from MajorBikePath_min</th>            <td>    0.0176</td> <td>    0.013</td> <td>    1.398</td> <td> 0.162</td> <td>   -0.007</td> <td>    0.042</td>\n",
+       "  <th>Neighbourhood-bikeLength_KM</th>            <td>    0.0180</td> <td>    0.017</td> <td>    1.088</td> <td> 0.277</td> <td>   -0.014</td> <td>    0.050</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time from MajorBikePath_min</th>            <td>    0.0130</td> <td>    0.012</td> <td>    1.057</td> <td> 0.290</td> <td>   -0.011</td> <td>    0.037</td>\n",
        "</tr>\n",
        "</table>"
       ],
@@ -513,48 +568,145 @@
        "                                Probit Regression Results                                 \n",
        "==========================================================================================\n",
        "Dep. Variable:     Rank_Overall-Quality-Of-Biking   No. Observations:                  243\n",
-       "Model:                                     Probit   Df Residuals:                      236\n",
-       "Method:                                       MLE   Df Model:                            6\n",
-       "Date:                            Fri, 23 Feb 2024   Pseudo R-squ.:                 0.01382\n",
-       "Time:                                    21:51:06   Log-Likelihood:                -121.81\n",
+       "Model:                                     Probit   Df Residuals:                      235\n",
+       "Method:                                       MLE   Df Model:                            7\n",
+       "Date:                            Sat, 24 Feb 2024   Pseudo R-squ.:                 0.04411\n",
+       "Time:                                    12:15:15   Log-Likelihood:                -118.07\n",
        "converged:                                   True   LL-Null:                       -123.51\n",
-       "Covariance Type:                        nonrobust   LLR p-value:                    0.7553\n",
+       "Covariance Type:                        nonrobust   LLR p-value:                    0.1432\n",
        "==========================================================================================================\n",
        "                                             coef    std err          z      P>|z|      [0.025      0.975]\n",
        "----------------------------------------------------------------------------------------------------------\n",
-       "age                                        0.0034      0.004      0.768      0.443      -0.005       0.012\n",
-       "sex                                        0.1014      0.188      0.539      0.590      -0.267       0.470\n",
-       "BikingForWork                              0.3989      0.150      2.665      0.008       0.106       0.692\n",
-       "Num of Recreational-Biker                  0.0015      0.095      0.016      0.987      -0.185       0.188\n",
-       "AccessToMotorVehicle_1Yes-2No-3Unknown  2.961e-05      0.069      0.000      1.000      -0.135       0.136\n",
-       "Neighbourhood-bikeLength_KM                0.0282      0.017      1.688      0.091      -0.005       0.061\n",
-       "Time from MajorBikePath_min                0.0176      0.013      1.398      0.162      -0.007       0.042\n",
+       "const                                      1.2650      0.466      2.713      0.007       0.351       2.179\n",
+       "age                                       -0.0100      0.007     -1.518      0.129      -0.023       0.003\n",
+       "sex                                        0.0381      0.192      0.198      0.843      -0.339       0.415\n",
+       "BikingForWork                              0.3104      0.151      2.049      0.040       0.014       0.607\n",
+       "Num of Recreational-Biker                 -0.1080      0.103     -1.050      0.294      -0.310       0.094\n",
+       "AccessToMotorVehicle_1Yes-2No-3Unknown    -0.1147      0.081     -1.410      0.159      -0.274       0.045\n",
+       "Neighbourhood-bikeLength_KM                0.0180      0.017      1.088      0.277      -0.014       0.050\n",
+       "Time from MajorBikePath_min                0.0130      0.012      1.057      0.290      -0.011       0.037\n",
        "==========================================================================================================\n",
        "\"\"\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "probit_vars = ['age', 'sex', 'BikingForWork', 'Num of Recreational-Biker', \n",
+    "               'AccessToMotorVehicle_1Yes-2No-3Unknown', \n",
+    "               'Neighbourhood-bikeLength_KM', 'Time from MajorBikePath_min']\n",
+    "\n",
     "probit_mod = smd.Probit(y_probit_gt2, \n",
-    "                        df_raw[probit_vars]\n",
+    "                        add_constant(df_raw[probit_vars])\n",
     "                       )\n",
     "probit_res = probit_mod.fit()\n",
+    "\n",
+    "print(f\"{probit_res.aic:.2f} vs null {probit_null_aic:.2f} (lower is better)\")\n",
     "probit_res.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e6a635ed-b85a-49a6-8840-0ed6f2e22de8",
+   "execution_count": 33,
+   "id": "3aa5666a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.499132\n",
+      "         Iterations 5\n",
+      "246.58 vs null 249.03 (lower is better)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tiggy/anaconda3/lib/python3.9/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
+      "  x = pd.concat(x[::order], 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Probit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>   <td>Rank_Overall-Quality-Of-Biking</td> <th>  No. Observations:  </th>  <td>   243</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                       <td>Probit</td>             <th>  Df Residuals:      </th>  <td>   241</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>                        <td>MLE</td>              <th>  Df Model:          </th>  <td>     1</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>                   <td>Sat, 24 Feb 2024</td>        <th>  Pseudo R-squ.:     </th>  <td>0.01801</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                       <td>12:15:35</td>            <th>  Log-Likelihood:    </th> <td> -121.29</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>                    <td>True</td>              <th>  LL-Null:           </th> <td> -123.51</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>            <td>nonrobust</td>           <th>  LLR p-value:       </th>  <td>0.03493</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "        <td></td>           <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>         <td>    0.6501</td> <td>    0.121</td> <td>    5.368</td> <td> 0.000</td> <td>    0.413</td> <td>    0.888</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>BikingForWork</th> <td>    0.2965</td> <td>    0.145</td> <td>    2.039</td> <td> 0.041</td> <td>    0.012</td> <td>    0.581</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                                Probit Regression Results                                 \n",
+       "==========================================================================================\n",
+       "Dep. Variable:     Rank_Overall-Quality-Of-Biking   No. Observations:                  243\n",
+       "Model:                                     Probit   Df Residuals:                      241\n",
+       "Method:                                       MLE   Df Model:                            1\n",
+       "Date:                            Sat, 24 Feb 2024   Pseudo R-squ.:                 0.01801\n",
+       "Time:                                    12:15:35   Log-Likelihood:                -121.29\n",
+       "converged:                                   True   LL-Null:                       -123.51\n",
+       "Covariance Type:                        nonrobust   LLR p-value:                   0.03493\n",
+       "=================================================================================\n",
+       "                    coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "---------------------------------------------------------------------------------\n",
+       "const             0.6501      0.121      5.368      0.000       0.413       0.888\n",
+       "BikingForWork     0.2965      0.145      2.039      0.041       0.012       0.581\n",
+       "=================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# binary_probit = smf.probit(formula, data = df).fit()\n",
-    "# binary_probit.summary()"
+    "probit_vars = ['BikingForWork'] #, 'Num of Recreational-Biker']\n",
+    "\n",
+    "probit_mod = smd.Probit(y_probit_gt2, \n",
+    "                        add_constant(df_raw[probit_vars])\n",
+    "                       )\n",
+    "probit_res = probit_mod.fit()\n",
+    "\n",
+    "print(f\"{probit_res.aic:.2f} vs null {probit_null_aic:.2f} (lower is better)\")\n",
+    "probit_res.summary()"
    ]
   },
   {
